# olio_harjoitukset

./: .gitignore  README.md
Git_testaus/: CMakeLists.txt
H1/: funktiot.cpp  funktiot.h  main.cpp
H2/: car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
H2B/: car.cpp  car.h  main.cpp
H3A/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
H3B/: animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
H4/: car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
H5/: aggregationa.cpp  aggregationa.h  assosiationa.h  classb.cpp  classb.h  main.cpp
H6A/: main.cpp
H6B/: exampleclass.cpp  exampleclass.h  main.cpp
Harjoitus1/: CMakeLists.txt  main.cpp
Harjoitus2/: CMakeLists.txt
